--- a/src/input.css
+++ b/src/input.css
@@ -5,14 +5,31 @@
 h1 {
   font-family: "Rakkas", cursive;
 }
-h2, h3, h4, h5, h6 {
+h2,
+h3,
+h4,
+h5,
+h6 {
   font-family: "Open Sans", sans-serif;
   font-weight: 600;
 }
 
-p, body {
+p,
+body {
   font-family: "Open Sans", sans-serif;
   font-weight: 400;
+}
+
+/* Personalizar dropdowns */
+select {
+  background-image: url("data:image/svg+xml;charset=UTF-8,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 24 24' fill='none' stroke='currentColor' stroke-width='2'%3e%3cpolyline points='6,9 12,15 18,9'%3e%3c/polyline%3e%3c/svg%3e");
+  background-repeat: no-repeat;
+  background-position: right 12px center;
+  background-size: 16px;
+  padding-right: 40px !important;
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  appearance: none;
 }
 
 /* Custom site styles: gradient background and translucent panels */
